--- a/development/metadata_viz.Rmd
+++ b/development/metadata_viz.Rmd
@@ -19,7 +19,7 @@ scan_meta %>%
   group_by(date, round, operator_code) %>%
   summarise(n_scans = n()) %>%
   ggplot() + 
-  geom_jitter(aes(x = date, y = round, color = factor(operator_code), size = n_scans)) + 
+  geom_point(aes(x = date, y = round, color = factor(operator_code), size = n_scans), alpha = 0.7) + 
   theme_bw() + 
   facet_wrap(~operator_code, nrow = 5) + 
   labs(x = "Date", y = "Round Number") + 
@@ -34,7 +34,7 @@ scan_meta %>%
   group_by(date, round, operator_code) %>%
   summarise(n_scans = n()) %>%
   ggplot() + 
-  geom_jitter(aes(x = date, y = operator_code, color = factor(operator_code), size = n_scans)) + 
+  geom_point(aes(x = date, y = operator_code, color = factor(operator_code), size = n_scans), alpha = 0.7) + 
   theme_bw() + 
   facet_wrap(~round, nrow = 5) + 
   labs(x = "Date", y = "Operator") + 
@@ -69,7 +69,7 @@ scan_meta %>%
            time = hms::as.hms(time), 
            hour = lubridate::hour(time)) %>%
   ggplot() + 
-  geom_density(aes(x = time, fill = factor(operator_code)), alpha = 0.6) +
+  geom_histogram(aes(x = time, fill = factor(operator_code)),  position = "identity", alpha = 0.6) +
   theme_bw() + 
   labs(x = "Time of Day") + 
   scale_fill_discrete(name = "Operator")
