--- a/development/data_green123_viz.Rmd
+++ b/development/data_green123_viz.Rmd
@@ -13,7 +13,7 @@ library(bulletxtrctr)
 
 First, we want to add our "unique_id" for each land to the signature data, so we can group them by that and align the lands. 
 ```{r}
-green_sigs <- readRDS("../data/variability_scans/green_123_sigs.rda")
+green_sigs <- readRDS("../data/variability_scans/Green_all_sigs.rda")
 green_sigs <- green_sigs %>% 
   select(scan_id, sigs)
 head(green_sigs)
@@ -37,13 +37,13 @@ bl_g1 <- bl_g1 %>% mutate(sigs_aligned = purrr::map(sigs, .f = function(row){
   lands
 }))
 
-blg1_long <- bl_g1 %>% unnest(sigs_aligned)
+#blg1_long <- bl_g1 %>% unnest(sigs_aligned)
 
-blg1_long %>% 
-  ggplot() + 
-  geom_line(aes(x = x_aligned, y = sig2, group = scan_id, color = factor(bullet)), alpha = 0.7) + 
-  geom_line(aes(x = x_aligned, y = sig1)) + 
-  theme_bw() 
+#blg1_long %>% 
+#  ggplot() + 
+#  geom_line(aes(x = x_aligned, y = sig2, group = scan_id, color = factor(bullet)), alpha = 0.7) + 
+#  geom_line(aes(x = x_aligned, y = sig1)) + 
+#  theme_bw() 
 
 bl_g2 <- green_sigs %>% filter(unique_id == "BL G-2")
 bl_g2 <- bl_g2 %>% mutate(sigs_aligned = purrr::map(sigs, .f = function(row){
