--- a/development/data_orange123_viz.Rmd
+++ b/development/data_orange123_viz.Rmd
@@ -14,7 +14,7 @@ library(bulletxtrctr)
 
 First, we want to add our "unique_id" for each land to the signature data, so we can group them by that and align the lands. 
 ```{r}
-orange_sigs <- readRDS("../data/variability_scans/orange_123_sigs.rda")
+orange_sigs <- readRDS("../data/variability_scans/Orange_all_sigs.rda")
 orange_sigs <- orange_sigs %>% 
   select(scan_id, sigs)
 head(orange_sigs)
@@ -40,14 +40,14 @@ bl_o1 <- bl_o1 %>% mutate(sigs_aligned = purrr::map(sigs, .f = function(row){
   lands
 }))
 
-blo1_long <- bl_o1 %>% unnest(sigs_aligned)
+#blo1_long <- bl_o1 %>% unnest(sigs_aligned)
 
-blo1_long %>% 
-  filter(operator != "Mya") %>%
-  ggplot() + 
-  geom_line(aes(x = x_aligned, y = sig2, group = scan_id, color = factor(bullet)), alpha = 0.7) + 
-  geom_line(aes(x = x_aligned, y = sig1)) + 
-  theme_bw() 
+#blo1_long %>% 
+#  filter(operator != "Mya") %>%
+#  ggplot() + 
+#  geom_line(aes(x = x_aligned, y = sig2, group = scan_id, color = factor(bullet)), alpha = 0.7) + 
+#  geom_line(aes(x = x_aligned, y = sig1)) + 
+#  theme_bw() 
 
 bl_o2 <- orange_sigs %>% filter(unique_id == "BL O-2")
 bl_o2 <- bl_o2 %>% mutate(sigs_aligned = purrr::map(sigs, .f = function(row){
