--- a/development/metadata_viz.Rmd
+++ b/development/metadata_viz.Rmd
@@ -74,3 +74,121 @@ scan_meta %>%
   labs(x = "Time of Day") + 
   scale_fill_discrete(name = "Operator")
 ```
+
+
+```{r}
+library(tidyverse)
+library(bulletxtrctr)
+library(x3ptools)
+filenames <- list.files("/media/Raven/Variability/", pattern = "*.x3p", full.names = T, recursive = T)
+scans <- data.frame(source = filenames)
+
+scans <- scans %>%
+  mutate(operator = purrr::map_chr(as.character(source), .f = function(filename){
+    strsplit(strsplit(filename, "//")[[1]][2], "/")[[1]][1]
+  }),
+  round = purrr::map_chr(as.character(source), .f = function(filename){
+    str_trim(strsplit(filename, "-")[[1]][2])
+  }), 
+  machine = purrr::map_chr(as.character(source), .f = function(filename){
+    str_trim(strsplit(filename, "-")[[1]][6])
+  }), 
+  barrel = purrr::map_chr(as.character(source), .f = function(filename){
+    str_trim(strsplit(filename, "-")[[1]][3])
+  }), 
+  bullet = purrr::map_chr(as.character(source), .f = function(filename){
+    str_trim(strsplit(filename, "-")[[1]][4])
+  }), 
+  land = purrr::map_chr(as.character(source), .f = function(filename){
+    str_trim(strsplit(filename, "-")[[1]][5])
+  }))
+scans %>% group_by(operator, machine, bullet, barrel, land) %>% summarise(n= n())
+scans %>% filter(operator == "Anyesha") %>% group_by(machine, bullet, barrel, land) %>% summarise(n = n())
+
+allison_issues <- scans %>% filter(operator == "Allison", (round == "Round 1" | round == "Round 2")) %>% pull(source)
+marco_issues <- scans %>% filter(operator == "Marco", round == "Round 3", barrel == "Barrel Orange", bullet == "Bullet 2", machine == "Sneox2") %>% pull(source)
+mark_issues1 <- scans %>% filter(operator == "Mark", round == "Round 4", (barrel == "Barrel Orange" | barrel == "Barrel Pink"), machine == "Sneox1") %>% pull(source)
+mark_issues2 <- scans %>% filter(operator == "Mark", round == "Round 2", barrel == "Barrel Blue", machine == "Sneox1") %>% pull(source)
+mya_issues <- scans %>% filter(operator == "Mya", round %in% c("Round 2", "Round 3"), barrel != "Barrel Blue") %>% pull(source)
+samantha_issues <- scans %>% filter(operator == "Samantha", round == "Round 3", barrel == "Barrel Orange", bullet == "Bullet 3", machine == "Sneox2") %>% pull(source)
+
+all_issues <- c(as.character(allison_issues), as.character(marco_issues), as.character(mark_issues1), as.character(mark_issues2), as.character(mya_issues), as.character(samantha_issues))
+
+scan_issues <- scans %>% filter(source %in% all_issues)
+
+scan_issues <- scan_issues %>% mutate(x3p = purrr::map(as.character(source), .f = function(filename){
+  x3ptools::read_x3p(filename)
+}))
+
+
+scan_issues <- scan_issues %>% mutate(sizeX = purrr::map_dbl(x3p, .f = function(x3p){
+  as.numeric(x3p$matrix.info$MatrixDimension$SizeX[[1]][1])
+}), 
+sizeY = purrr::map_dbl(x3p, .f = function(x3p){
+  as.numeric(x3p$matrix.info$MatrixDimension$SizeY[[1]][1])
+}), 
+date = purrr::map_chr(x3p, .f = function(x3p){
+  strsplit(x3p$general.info$Date[[1]][1], "T")[[1]][1]
+}),
+time = purrr::map_chr(x3p, .f = function(x3p){
+  strsplit(x3p$general.info$Date[[1]][1], "T")[[1]][2]
+}))
+
+scan_issues %>% 
+  filter(source %in% allison_issues) %>% 
+  select(-x3p) %>% 
+  group_by(date, time) %>%
+  mutate(n = n()) %>%
+  ungroup() %>%
+  #arrange(desc(n), date, time) %>%
+  select(source, sizeX, sizeY, date, time, n) %>%
+  filter(str_detect(source, "Round 1") == T) %>%
+  arrange(source, date)
+
+scan_issues %>% 
+  filter(source %in% marco_issues) %>% 
+  select(-x3p) %>% 
+  group_by(date, time) %>%
+  mutate(n = n()) %>%
+  ungroup() %>%
+  arrange(desc(n), date, time) %>%
+  select(source, sizeX, sizeY, date, time, n) 
+
+scan_issues %>% 
+  filter(source %in% mark_issues1) %>%
+  select(-x3p) %>%
+  group_by(date, time) %>% 
+  mutate(n = n()) %>%
+  ungroup() %>%
+  arrange(desc(n), date, time) %>%
+  select(source, sizeX, sizeY, date, time, n)
+
+scan_issues %>% 
+  filter(source %in% mark_issues2) %>%
+  select(-x3p) %>%
+  group_by(date, time) %>% 
+  mutate(n = n()) %>%
+  ungroup() %>%
+  arrange(desc(n), date, time) %>%
+  select(source, sizeX, sizeY, date, time, n)
+
+
+scan_issues %>% 
+  filter(source %in% mya_issues) %>%
+  select(-x3p) %>%
+  group_by(date, time) %>% 
+  mutate(n = n()) %>%
+  ungroup() %>%
+  arrange(desc(n), date, time) %>%
+  select(source, sizeX, sizeY, date, time, n)
+
+scan_issues %>% 
+  filter(source %in% samantha_issues) %>%
+  select(-x3p) %>%
+  group_by(date, time) %>% 
+  mutate(n = n()) %>%
+  ungroup() %>%
+  arrange(desc(n), date, time) %>%
+  select(source, sizeX, sizeY, date, time, n)
+
+```
